fix counter legend alignment in firefox

--- a/main.css
+++ b/main.css
@@ -417,10 +417,9 @@ body {
 }
 .counter__legend {
 	background-color: var(--c-black-10);
-	text-align: center;
 	line-height: 1;
 	padding: 0.5rem 0.75rem;
-	margin-bottom: 0.5rem;
+	margin: 0 auto 0.5rem;
 	border-radius: 1rem;
 }
 .counter__input {
